# ai-character-studio

./: .gitignore  AI Character Studio.md  README.md  pyproject.toml  requirements-generate.txt  requirements.txt
config/: generation.yaml  paths.yaml  training.yaml
docs/: configuration.md  quickstart.md
kaggle/generate/: generate_kernel.py  kernel-metadata.json
kaggle/lora-dataset/: dataset-metadata.json
kaggle/train/: kernel-metadata.json  train_kernel.py
notebooks/: generate.ipynb  train_lora.ipynb  train_lora_kaggle.ipynb
scripts/: _bootstrap.py  download_models.py  generate.py  mount_drive.py  publish_lora.py  selfcheck.py  setup.py  train.py
src/: __init__.py
src/dataset/: __init__.py  caption.py  loader.py  preprocess.py
src/generate/: __init__.py  naming.py  pipeline.py
src/models/: __init__.py  download.py
src/prompts/: __init__.py  builder.py  template.py  wordbanks.yaml
src/train/: __init__.py  checkpoint.py  dataset_config.py  export.py  kohya_runner.py
src/utils/: __init__.py  config.py  env.py  logging.py  paths.py  schemas.py
tasks/: todo.md
webapp/: README.md  __init__.py  app.py  orchestrator.py  requirements.txt  store.py
webapp/templates/: index.html
