[project]
name = "ai-character-studio"
version = "1.0.0"
description = "Automated AI character LoRA training and image generation on FLUX"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Resolve `src.*` imports from the repository root (not from inside src/).
[tool.ty.environment]
root = ["."]
extra-paths = ["."]

[tool.pyright]
extraPaths = ["."]
